--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
         uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: nightwatch-reports
+          name: tests_output
           path: reports/
