updated the path for automation report

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
         if: always()
         with:
           name: tests_output
-          path: reports/
+          path: tests_output/nightwatch-html-report/
